2006-04-03  Guillaume Smet <guillaume-pg@smet.org>

	* added a tooltip with detailed information on queries and errors
	* only display identified statistics if different from overall

2006-04-02  Guillaume Smet <guillaume-pg@smet.org>

	* added a stderr parser based on Tatsuo Ishii's suggestion:
	http://pgfoundry.org/forum/forum.php?thread_id=735&forum_id=555

2006-04-01  Guillaume Smet <guillaume-pg@smet.org>

	* added filter on database and user

2006-03-31  Open Wide <guillaume.smet@openwide.fr>

	* added two more lines to ignore
	* fixed error reporting for php 4.4
	* fixed a bug when two consecutive blocks have the same command line
	number in the same logstream (should not happen but seems to happen
	sometimes anyway)

2006-03-27  Open Wide <guillaume.smet@openwide.fr>

	* removed a few notices with PHP 5.1
	* added another line to ignore

2006-03-26  Guillaume Smet <guillaume-pg@smet.org>

	* improved the errors report
	* released 0.5

2006-03-25  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a bug reported by Simon Riggs on pgsql-hackers
	http://archives.postgresql.org/pgsql-hackers/2006-03/msg00694.php
	* added html output for hourly statistics report
	* rewrote the configuration stuff to use constants instead of a function
	* fixed unit tests
	* added a dynamic CSS based TOC for users who use a real browser
	* ignore autovacuum log lines
	* fixed syslog date detection again

2006-03-23  Guillaume Smet <guillaume-pg@smet.org>

	* added the ability to parse a log from stdin
	* added the microsecond unit (us) so that we can use pgFouine to parse
	a special apache log file

2006-03-13  Guillaume Smet <guillaume-pg@smet.org>

	* fixed syslog date detection (problem with php 4.3.2 on CentOS 3.5)

2006-03-07  Guillaume Smet <guillaume-pg@smet.org>

	* fixed an infinite loop when duration and count are exactly identical
	for two different normalized queries reported by David Touitou

2006-02-11  Guillaume Smet <guillaume-pg@smet.org>
