@@ -1,3 +1,7 @@
+2006-04-04  Guillaume Smet <guillaume-pg@smet.org>
+
+	* added a tooltip with hourly statistics on normalized queries
+
 2006-04-03  Guillaume Smet <guillaume-pg@smet.org>
 
 	* added a tooltip with detailed information on queries and errors
